# jq-todo-backend-py

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  install-pre-commit  install-pre-commit.bat  pyproject.toml
.github/workflows/: poetry.yml
jqtodobackend/: backend.py  db.py  models.py  repository.py  settings.py
tests/: __init__.py  backend_test.py
