[tool.poetry]
name = "jq-todo-backend-py"
version = "0.1.0"
description = ""
authors = ["Johannes Qvarford <johannes.qvarford@lynkco.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
