[tool.poetry]
name = "jq-todo-backend-py"
version = "0.1.0"
description = ""
authors = ["Johannes Qvarford <johannes.qvarford@nexergroup.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
fastapi = {extras = ["all"], version = "^0.74.1"}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.31"}
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"